--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,7 +15,7 @@
   --red: #dc3545;
   --orange: #fd7e14;
   --yellow: #f0ed77;
-  --green: #3aaa37;
+  --green: #45a049;
   --teal: #20c997;
   --cyan: #17a2b8;
   --white: #fff;
@@ -23,7 +23,7 @@
   --gray-dark: #343a40;
   --primary: #007bff;
   --secondary: #6c757d;
-  --success: #3aaa37;
+  --success: #45a049;
   --info: #17a2b8;
   --warning: #f0ed77;
   --danger: #dc3545;
@@ -1714,23 +1714,23 @@ pre code {
 .table-success,
 .table-success > th,
 .table-success > td {
-  background-color: #c8e7c7;
+  background-color: #cbe4cc;
 }
 
 .table-success th,
 .table-success td,
 .table-success thead th,
 .table-success tbody + tbody {
-  border-color: #99d397;
+  border-color: #9ecea0;
 }
 
 .table-hover .table-success:hover {
-  background-color: #b6dfb5;
+  background-color: #badbbc;
 }
 
 .table-hover .table-success:hover > td,
 .table-hover .table-success:hover > th {
-  background-color: #b6dfb5;
+  background-color: #badbbc;
 }
 
 .table-info,
@@ -2160,7 +2160,7 @@ textarea.form-control {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 80%;
-  color: #3aaa37;
+  color: #45a049;
 }
 
 .valid-tooltip {
@@ -2174,24 +2174,24 @@ textarea.form-control {
   font-size: 0.875rem;
   line-height: 1.5;
   color: #fff;
-  background-color: rgba(58, 170, 55, 0.9);
+  background-color: rgba(69, 160, 73, 0.9);
   border-radius: 0.25rem;
 }
 
 .was-validated .form-control:valid,
 .form-control.is-valid {
-  border-color: #3aaa37;
+  border-color: #45a049;
   padding-right: 2.25rem;
   background-repeat: no-repeat;
   background-position: center right calc(2.25rem / 4);
   background-size: calc(2.25rem / 2) calc(2.25rem / 2);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%233aaa37' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2345a049' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
 }
 
 .was-validated .form-control:valid:focus,
 .form-control.is-valid:focus {
-  border-color: #3aaa37;
-  box-shadow: 0 0 0 0.2rem rgba(58, 170, 55, 0.25);
+  border-color: #45a049;
+  box-shadow: 0 0 0 0.2rem rgba(69, 160, 73, 0.25);
 }
 
 .was-validated .form-control:valid ~ .valid-feedback,
@@ -2209,15 +2209,15 @@ textarea.form-control.is-valid {
 
 .was-validated .custom-select:valid,
 .custom-select.is-valid {
-  border-color: #3aaa37;
+  border-color: #45a049;
   padding-right: 3.4375rem;
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%233aaa37' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") no-repeat center right 1.75rem/1.125rem 1.125rem;
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2345a049' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") no-repeat center right 1.75rem/1.125rem 1.125rem;
 }
 
 .was-validated .custom-select:valid:focus,
 .custom-select.is-valid:focus {
-  border-color: #3aaa37;
-  box-shadow: 0 0 0 0.2rem rgba(58, 170, 55, 0.25);
+  border-color: #45a049;
+  box-shadow: 0 0 0 0.2rem rgba(69, 160, 73, 0.25);
 }
 
 .was-validated .custom-select:valid ~ .valid-feedback,
@@ -2236,7 +2236,7 @@ textarea.form-control.is-valid {
 
 .was-validated .form-check-input:valid ~ .form-check-label,
 .form-check-input.is-valid ~ .form-check-label {
-  color: #3aaa37;
+  color: #45a049;
 }
 
 .was-validated .form-check-input:valid ~ .valid-feedback,
@@ -2248,12 +2248,12 @@ textarea.form-control.is-valid {
 
 .was-validated .custom-control-input:valid ~ .custom-control-label,
 .custom-control-input.is-valid ~ .custom-control-label {
-  color: #3aaa37;
+  color: #45a049;
 }
 
 .was-validated .custom-control-input:valid ~ .custom-control-label::before,
 .custom-control-input.is-valid ~ .custom-control-label::before {
-  border-color: #3aaa37;
+  border-color: #45a049;
 }
 
 .was-validated .custom-control-input:valid ~ .valid-feedback,
@@ -2265,23 +2265,23 @@ textarea.form-control.is-valid {
 
 .was-validated .custom-control-input:valid:checked ~ .custom-control-label::before,
 .custom-control-input.is-valid:checked ~ .custom-control-label::before {
-  border-color: #51c64e;
-  background-color: #51c64e;
+  border-color: #5eba62;
+  background-color: #5eba62;
 }
 
 .was-validated .custom-control-input:valid:focus ~ .custom-control-label::before,
 .custom-control-input.is-valid:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(58, 170, 55, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(69, 160, 73, 0.25);
 }
 
 .was-validated .custom-control-input:valid:focus:not(:checked) ~ .custom-control-label::before,
 .custom-control-input.is-valid:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #3aaa37;
+  border-color: #45a049;
 }
 
 .was-validated .custom-file-input:valid ~ .custom-file-label,
 .custom-file-input.is-valid ~ .custom-file-label {
-  border-color: #3aaa37;
+  border-color: #45a049;
 }
 
 .was-validated .custom-file-input:valid ~ .valid-feedback,
@@ -2293,8 +2293,8 @@ textarea.form-control.is-valid {
 
 .was-validated .custom-file-input:valid:focus ~ .custom-file-label,
 .custom-file-input.is-valid:focus ~ .custom-file-label {
-  border-color: #3aaa37;
-  box-shadow: 0 0 0 0.2rem rgba(58, 170, 55, 0.25);
+  border-color: #45a049;
+  box-shadow: 0 0 0 0.2rem rgba(69, 160, 73, 0.25);
 }
 
 .invalid-feedback {
@@ -2633,40 +2633,40 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #fff;
-  background-color: #3aaa37;
-  border-color: #3aaa37;
+  background-color: #45a049;
+  border-color: #45a049;
 }
 
 .btn-success:hover {
   color: #fff;
-  background-color: #308d2e;
-  border-color: #2d832b;
+  background-color: #39853d;
+  border-color: #367c39;
 }
 
 .btn-success:focus,
 .btn-success.focus {
-  box-shadow: 0 0 0 0.2rem rgba(88, 183, 85, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(97, 174, 100, 0.5);
 }
 
 .btn-success.disabled,
 .btn-success:disabled {
   color: #fff;
-  background-color: #3aaa37;
-  border-color: #3aaa37;
+  background-color: #45a049;
+  border-color: #45a049;
 }
 
 .btn-success:not(:disabled):not(.disabled):active,
 .btn-success:not(:disabled):not(.disabled).active,
 .show > .btn-success.dropdown-toggle {
   color: #fff;
-  background-color: #2d832b;
-  border-color: #2a7a27;
+  background-color: #367c39;
+  border-color: #327335;
 }
 
 .btn-success:not(:disabled):not(.disabled):active:focus,
 .btn-success:not(:disabled):not(.disabled).active:focus,
 .show > .btn-success.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(88, 183, 85, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(97, 174, 100, 0.5);
 }
 
 .btn-info {
@@ -2932,24 +2932,24 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-success {
-  color: #3aaa37;
-  border-color: #3aaa37;
+  color: #45a049;
+  border-color: #45a049;
 }
 
 .btn-outline-success:hover {
   color: #fff;
-  background-color: #3aaa37;
-  border-color: #3aaa37;
+  background-color: #45a049;
+  border-color: #45a049;
 }
 
 .btn-outline-success:focus,
 .btn-outline-success.focus {
-  box-shadow: 0 0 0 0.2rem rgba(58, 170, 55, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(69, 160, 73, 0.5);
 }
 
 .btn-outline-success.disabled,
 .btn-outline-success:disabled {
-  color: #3aaa37;
+  color: #45a049;
   background-color: transparent;
 }
 
@@ -2957,14 +2957,14 @@ fieldset:disabled a.btn {
 .btn-outline-success:not(:disabled):not(.disabled).active,
 .show > .btn-outline-success.dropdown-toggle {
   color: #fff;
-  background-color: #3aaa37;
-  border-color: #3aaa37;
+  background-color: #45a049;
+  border-color: #45a049;
 }
 
 .btn-outline-success:not(:disabled):not(.disabled):active:focus,
 .btn-outline-success:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-success.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(58, 170, 55, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(69, 160, 73, 0.5);
 }
 
 .btn-outline-info {
@@ -5210,13 +5210,13 @@ a.badge-secondary:focus {
 
 .badge-success {
   color: #fff;
-  background-color: #3aaa37;
+  background-color: #45a049;
 }
 
 a.badge-success:hover,
 a.badge-success:focus {
   color: #fff;
-  background-color: #2d832b;
+  background-color: #367c39;
 }
 
 .badge-info {
@@ -5350,17 +5350,17 @@ a.badge-dark:focus {
 }
 
 .alert-success {
-  color: #1e581d;
-  background-color: #d8eed7;
-  border-color: #c8e7c7;
+  color: #245326;
+  background-color: #daecdb;
+  border-color: #cbe4cc;
 }
 
 .alert-success hr {
-  border-top-color: #b6dfb5;
+  border-top-color: #badbbc;
 }
 
 .alert-success .alert-link {
-  color: #113210;
+  color: #152f16;
 }
 
 .alert-info {
@@ -5617,20 +5617,20 @@ a.badge-dark:focus {
 }
 
 .list-group-item-success {
-  color: #1e581d;
-  background-color: #c8e7c7;
+  color: #245326;
+  background-color: #cbe4cc;
 }
 
 .list-group-item-success.list-group-item-action:hover,
 .list-group-item-success.list-group-item-action:focus {
-  color: #1e581d;
-  background-color: #b6dfb5;
+  color: #245326;
+  background-color: #badbbc;
 }
 
 .list-group-item-success.list-group-item-action.active {
   color: #fff;
-  background-color: #1e581d;
-  border-color: #1e581d;
+  background-color: #245326;
+  border-color: #245326;
 }
 
 .list-group-item-info {
@@ -6611,14 +6611,14 @@ button.bg-secondary:focus {
 }
 
 .bg-success {
-  background-color: #3aaa37 !important;
+  background-color: #45a049 !important;
 }
 
 a.bg-success:hover,
 a.bg-success:focus,
 button.bg-success:hover,
 button.bg-success:focus {
-  background-color: #2d832b !important;
+  background-color: #367c39 !important;
 }
 
 .bg-info {
@@ -6733,7 +6733,7 @@ button.bg-dark:focus {
 }
 
 .border-success {
-  border-color: #3aaa37 !important;
+  border-color: #45a049 !important;
 }
 
 .border-info {
@@ -10299,12 +10299,12 @@ a.text-secondary:focus {
 }
 
 .text-success {
-  color: #3aaa37 !important;
+  color: #45a049 !important;
 }
 
 a.text-success:hover,
 a.text-success:focus {
-  color: #267024 !important;
+  color: #2e6b31 !important;
 }
 
 .text-info {
@@ -10491,7 +10491,7 @@ a.text-dark:focus {
 }
 
 body {
-  background-color: #3aaa37;
+  background-color: #45a049;
   font-family: FucXed, Arial, Helvetica, sans-serif;
 }
 
@@ -10509,7 +10509,7 @@ select {
 
 input[type=submit] {
   width: 100%;
-  background-color: #3aaa37;
+  background-color: #45a049;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -10519,7 +10519,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #3aaa37;
+  background-color: #45a049;
 }
 
 .block {
@@ -10539,7 +10539,7 @@ img {
 }
 
 header {
-  background-color: #3aaa37;
+  background-color: #45a049;
 }
 
 header h1 {
@@ -10579,12 +10579,16 @@ ul {
   font-size: 2em;
 }
 
-ul {
-  padding: 0;
-  margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  text-transform: uppercase;
 }
 
 ul li {
-  list-style: none;
+  text-transform: inherit;
+  font-size: inherit;
 }
 
