--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -13,6 +13,7 @@
 
 .bg-green{
     background-color: $green;
+    width: 100%;
 }
 
 .bg-black {
@@ -83,6 +84,10 @@ header h1 {
 h1, h2, h3, h4, h5 {
     text-transform: uppercase;
     font-family: FucXed, Montserrat, sans-serif;
+}
+
+h2 {
+    margin: 1em 0;
 }
 
 ul {
