more info blocks

--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -81,7 +81,7 @@ header h1 {
     }
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2 {
     text-transform: uppercase;
     font-family: FucXed, Montserrat, sans-serif;
 }
