--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -36,10 +36,6 @@ body {
 .row {
     margin-bottom: 10px;
 }
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
 
 header {
     background-color: $green;
@@ -64,17 +60,7 @@ header h1 {
     position: relative;
     display: block;
     width: 240px;
-
-    span {
-        position: absolute;
-        background-color: #f0ed77;
-        padding: 4px 3px 2px 4px;
-        font-size: 15px;
-        bottom: -10;
-        right: -12px;
-        line-height: 1;
-        transform: rotate(1deg);
-    }
+    margin: 1em 0;
 
     img {
         width: 100%;
