h1 title margin improved

--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -72,6 +72,10 @@ h1, h2 {
     font-family: FucXed, Montserrat, sans-serif;
 }
 
+h1 {
+    margin: 1em 0 0.5em 0;
+}
+
 h2 {
     margin: 1em 0;
 }
