refactored ordered list

--- a/web/app/themes/xrnl/assets/sass/list.scss
+++ b/web/app/themes/xrnl/assets/sass/list.scss
@@ -1,16 +1,21 @@
 
 ol {
   list-style: none;
+  counter-reset: xr-counter;
+
   li{
     position: relative;
     padding-left: 25px;
     margin-bottom: 25px;
-    span {
-      position: absolute;
-      line-height: 50px;
-      left:-25px;
+    counter-increment: xr-counter;
+
+    &::before {
+      content: counter(xr-counter);
+      line-height: 40px;
       font-size: 50px;
       font-weight: bold;
+      position: absolute;
+      left:-15px;
     }
   }
 }
