--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -80,14 +80,8 @@ h2 {
     margin: 1em 0;
 }
 
-ul {
-    //padding: 0;
-    //margin: 0;
-    li {
-        //list-style: none;
-        text-transform: inherit;
-        font-size: inherit;
-    }
+h3 {
+    margin: 0.5em 0;
 }
 
 footer {
