--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -13,11 +13,11 @@ body > header {
     position: relative;
 }
 
-nav.navbar {
-    position: absolute;
-    bottom: 30px;
-    right: 30px;
-}
+//nav.navbar {
+//    position: absolute;
+//    bottom: 30px;
+//    right: 30px;
+//}
 
 .bg-green{
     background-color: $green;
@@ -42,12 +42,13 @@ body {
 }
 
 .row {
-    margin-bottom: 10px;
+    //margin-bottom: 10px;
 }
 
 header {
     background-color: $green;
     padding: 10px;
+    height: 172px;
 
 }
 header h1 {
@@ -65,10 +66,10 @@ header h1 {
 
 .logo {
 
-    position: relative;
-    display: block;
-    width: 240px;
-    margin: 1em 0;
+    //position: relative;
+    //display: block;
+    //width: 240px;
+    //margin: 1em 0;
 
     img {
         width: 100%;
@@ -108,3 +109,28 @@ img {
     }
 }
 
+.navbar-collapse {
+    //height: 100vh;
+    position: absolute;
+    //width: 100vw;
+    background-color: $green;
+    z-index: 1000;
+    top: 0;
+    left: -15;
+    text-decoration: underline;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: FucXed, Montserrat, sans-serif;
+    font-size: 44px;
+
+    width: calc(100vw - 15px);
+
+}
+
+.navbar-toggler {
+    z-index: 2000;
+}
+
+.navbar-toggle.collapsed .icon:before {
+    content: '\f00d';
+}
