--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -268,6 +268,9 @@ p {
     margin-top: 40px;
     font-size: 90px;
 }
+.blocks a:hover {
+    opacity: 0.9;
+}
 .demands h1 {
     text-align: center;
 }
