make front page more attractive, make header responsive

--- a/web/app/themes/xrnl/assets/sass/app.scss
+++ b/web/app/themes/xrnl/assets/sass/app.scss
@@ -1,195 +1,10 @@
-@import "variables";
-
-
-
 // Bootstrap
+@import "variables";
 @import '~bootstrap/scss/bootstrap';
-
-
+@import "typography";
+@import "header";
+@import "footer";
 @import "list";
 @import "form";
 @import "press";
-
-body > header {
-    position: relative;
-}
-
-//nav.navbar {
-//    position: absolute;
-//    bottom: 30px;
-//    right: 30px;
-//}
-
-.bg-green{
-    background-color: $green;
-    width: 100%;
-}
-
-.bg-black {
-    background-color: $black;
-    color: $white;
-}
-
-body {
-    background-color: $white;
-    font-family: 'Crimson Text', serif;
-}
-
-.block {
-    border-radius: 5px;
-    text-align: left;
-    max-width: 800px;
-    background-color: $gray-200;
-}
-
-.row {
-    //margin-bottom: 10px;
-}
-
-header {
-    background-color: $green;
-    padding: 10px;
-    //height: 172px;
-
-}
-header h1 {
-    color: $white;
-    font-size: 5em;
-    width: 100%;
-    text-align: center;
-    margin: 10px;
-    padding: 0;
-}
-
-.text-green {
-    color: $green;
-}
-
-.logo {
-
-    //position: relative;
-    //display: block;
-    //width: 240px;
-    //margin: 1em 0;
-
-    img {
-        width: 100%;
-    }
-}
-
-h1, h2 {
-    text-transform: uppercase;
-    font-family: FucXed, Montserrat, sans-serif;
-}
-
-h1 {
-    margin: 1em 0 0.5em 0;
-}
-
-h2 {
-    margin: 1em 0;
-}
-
-h3 {
-    margin: 0.5em 0;
-}
-
-footer {
-    padding: 15px;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-.container-media {
-    padding: 1em 0;
-    iframe {
-        width: 100%;
-    }
-}
-
-.navbar-collapse {
-    //height: 100vh;
-    position: absolute;
-    //width: 100vw;
-    background-color: $green;
-    z-index: 1000;
-    top: 0;
-    left: -15;
-    text-decoration: underline;
-    text-transform: uppercase;
-    text-align: center;
-    font-family: FucXed, Montserrat, sans-serif;
-    font-size: 44px;
-
-    width: calc(100vw - 15px);
-
-}
-
-.navbar-toggler {
-    z-index: 2000;
-}
-
-.navbar-toggle.collapsed .icon:before {
-    content: '\f00d';
-}
-
-
-/* Desktop nav added by Jeppe Bijker */
-
-#desktop-nav {
-    display: none;
-}
-
-@media screen and (min-width: 801px) {
-    header {
-        height: auto !important;
-    }
-
-    .navbar {
-        flex-wrap: nowrap;
-    }
-
-    .navbar-brand.logo {
-        min-width: 200px;
-    }
-
-    .navbar-toggler {
-        display: none;
-    }
-
-    #desktop-nav {
-        display: block;
-
-        .navbar-nav {
-            flex-direction: row;
-            flex-wrap: wrap;
-            /*align-content: space-between;*/
-        }
-
-        li {
-            text-align: center;
-            line-height: 1em;
-            width: 200px;
-            /*background-color: rgba(255, 255, 255, 0.1);*/
-            padding: 8px 5px;
-        }
-
-        a.nav-link {
-            display: inline;
-            text-align: center;
-
-            /*text-decoration: underline;*/
-            text-transform: uppercase;
-            font-family: FucXed, Montserrat, sans-serif;
-            /*font-size: 44px;*/
-        }
-
-        a.nav-link:hover {
-            text-decoration: underline;
-        }
-
-    }
-}
+@import "custom";
