--- a/web/app/themes/xrnl/assets/sass/_variables.scss
+++ b/web/app/themes/xrnl/assets/sass/_variables.scss
@@ -1,8 +1,17 @@
-$green: #21a73d;
-$yellow: #f0ed77;
 
-$black: #000;
-$white: #fff;
+$theme-colors: (
+  "primary": #21a73d,
+  "green": #21a73d,
+  "yellow": #ffc113,
+  "pink": #ed9bc4,
+  "blue": #71d0f1,
+  "black": #000,
+  "white": #fff
+) !default;
 
 $navbar-light-toggler-border-color: rgba(0,0,0,0);
 $navbar-light-color: #000;
+
+$enable-responsive-font-sizes:  true !default;
+$link-decoration:               underline !default;
+$brand-font:                    'FucXed', Montserrat, sans-serif !default;
