--- a/web/app/themes/xrnl/assets/sass/press.scss
+++ b/web/app/themes/xrnl/assets/sass/press.scss
@@ -11,7 +11,7 @@
       text-align: center;
     }
     display: block;
-    padding-bottom: 20px;
+    padding: 1rem 0;
     overflow: auto;
     &::after {
       clear: both;
@@ -19,8 +19,19 @@
   }
 }
 
-.wp-caption {
-  img {
-    max-width: calc(100vw - 30px);
-  }
+.display-posts-listing {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+.display-posts-listing .title {
+	display: block;
+	font-family: "FucXed", sans-serif;
+	text-transform: uppercase;
+	font-size: 14pt;
+	color: #555;
+}
+.display-posts-listing .date {
+	display: block;
+	color: #aaa;
 }
