--- a/web/app/themes/xrnl/assets/sass/_variables.scss
+++ b/web/app/themes/xrnl/assets/sass/_variables.scss
@@ -4,7 +4,9 @@ $theme-colors: (
   "green": #21a73d,
   "yellow": #ffc113,
   "pink": #ed9bc4,
-  "blue": #71d0f1,
+  "red": #dc4f00,
+  "orange": #f19631,
+  "blue": #75d0f1,
   "black": #000,
   "white": #fff
 ) !default;
