--- a/web/app/themes/xrnl/assets/sass/footer.scss
+++ b/web/app/themes/xrnl/assets/sass/footer.scss
@@ -1,75 +1,33 @@
 
 footer {
-	padding: 20px 0 50px 0;
-}
-footer h2 {
-	font-size: 16pt;
-	margin-bottom: 4px;
-	color: #eee;
-}
-footer ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-footer .menu a, footer a {
-	color: #eee;
-	padding: 2px 0;
-}
-footer .menu a:hover, footer a:hover {
-	color: #eee;
-	text-decoration: underline;
-}
+	color: #ddd;
 
-footer #language-selector {
-	margin-bottom: 20px;
-	opacity: 1;
-}
+	.nav-link,
+	a {
+		color: #fff;
+		padding-left: 0;
+		&:hover {
+			color: #eee;
+			text-decoration: underline;
+		}
+	}
 
-footer #language-selector a {
-	color: #ccc;
-}
-footer #language-selector .wpml-ls-current-language a {
-	color: #fff;
-/* 	border-bottom: 2px solid #fff; */
-}
-footer
-#language-selector .wpml-ls-last-item {
-	border-left: 2px solid #bbb;
-}
+	#language-selector {
+		margin-bottom: 20px;
+		opacity: 1;
+		a {
+			color: #ccc;
+		}
 
-.social-nav--footer ul a {
-  /* 	padding: 10px; */
-  height: 30px;
-  width: 30px;
-  border-radius: 20px;
-  border: 2px solid #fff;
-  color: #fff;
-	display: block;
-	text-align: center;
-	background-color: #000;
-	padding-top: 5px;
-}
+		.wpml-ls-current-language a {
+			border-right: 3px solid #bbb;
+		}
+	}
 
-.social-nav--footer {
-	min-width: 100px;
-/* 	background:red; */
-}
-.social-nav--footer ul {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-}
-.social-nav--footer li {
-	display: inline-block;
-}
-.social-nav--footer ul a:hover {
-	opacity: 0.8;
-}
-
-.donate--footer .btn {
-  background-color: #21a73d;
-}
-.donate--footer .btn:hover {
-  opacity: 0.9;
+	.donate--footer .btn {
+		background-color: #21a73d;
+		&:hover {
+			opacity: 0.9;
+		}
+	}
 }
